v1.6.0/_sources/api/generated/pywr.recorders.NumpyArrayAreaRecorder.rst.txt
pywr.recorders.NumpyArrayAreaRecorder
=====================================

.. currentmodule:: pywr.recorders

.. autoclass:: NumpyArrayAreaRecorder

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~NumpyArrayAreaRecorder.__init__
      ~NumpyArrayAreaRecorder.after
      ~NumpyArrayAreaRecorder.aggregated_value
      ~NumpyArrayAreaRecorder.before
      ~NumpyArrayAreaRecorder.finish
      ~NumpyArrayAreaRecorder.load
      ~NumpyArrayAreaRecorder.register
      ~NumpyArrayAreaRecorder.reset
      ~NumpyArrayAreaRecorder.setup
      ~NumpyArrayAreaRecorder.to_dataframe
      ~NumpyArrayAreaRecorder.unregister
      ~NumpyArrayAreaRecorder.values
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~NumpyArrayAreaRecorder.agg_func
      ~NumpyArrayAreaRecorder.children
      ~NumpyArrayAreaRecorder.comment
      ~NumpyArrayAreaRecorder.data
      ~NumpyArrayAreaRecorder.epsilon
      ~NumpyArrayAreaRecorder.ignore_nan
      ~NumpyArrayAreaRecorder.is_constraint
      ~NumpyArrayAreaRecorder.is_objective
      ~NumpyArrayAreaRecorder.model
      ~NumpyArrayAreaRecorder.name
      ~NumpyArrayAreaRecorder.node
      ~NumpyArrayAreaRecorder.parents
      ~NumpyArrayAreaRecorder.temporal_agg_func
   
   